color: Fix accidental partial color conversion

For color spaces that can't be represented by an matrix plus analytic
transfer function, we need to ensure that we don't accidentally enable
color conversion when the destination is undefined.

Tests may be disruptive and are in a separate patch.

BUG=694191
R=hubbe@chromium.org

Review-Url: https://codereview.chromium.org/2712533002 .
Cr-Commit-Position: refs/heads/master@{#451858}

Former-commit-id: 1d14a77942910d9f60af73c674809b1f82de3847